--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-langchain-community==0.4.1
-langchain-openai==1.0.2
-langchain-text-splitters==1.0.0
+langchain-community==0.3.31
+langchain-openai==0.3.35
+langchain-text-splitters==0.3.9
 faiss-cpu==1.12.0
+python-dotenv==1.2.1
